--- a/aiml_a3.ipynb
+++ b/aiml_a3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1/rIjvLToGsxKKUwL9/m8",
+      "authorship_tag": "ABX9TyNxvQyLvn8rloCjtKKzonLz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -81,6 +81,7 @@
         }
       ],
       "source": [
+        "#part 1\n",
         "from functools import lru_cache\n",
         "import random\n",
         "\n",
@@ -185,6 +186,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#part 2\n",
         "import math\n",
         "\n",
         "class TicTacToe:\n",
@@ -313,7 +315,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,6 +328,398 @@
             " |X|O\n",
             "-+-+-\n",
             " | | \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#part 3\n",
+        "from collections import defaultdict\n",
+        "import random\n",
+        "\n",
+        "class Board(defaultdict):\n",
+        "    empty = '.'\n",
+        "    off = '#'\n",
+        "\n",
+        "    def __init__(self, width=3, height=3, to_move=None, **kwds):\n",
+        "        super().__init__(lambda: self.empty)\n",
+        "        self.width = width\n",
+        "        self.height = height\n",
+        "        self.to_move = to_move\n",
+        "        self.utility = 0\n",
+        "        self.update(kwds)\n",
+        "\n",
+        "    def new(self, changes: dict, **kwds) -> 'Board':\n",
+        "\n",
+        "        board = Board(width=self.width, height=self.height, **kwds)\n",
+        "        board.update(self)\n",
+        "        board.update(changes)\n",
+        "        return board\n",
+        "\n",
+        "    def missing(self, loc):\n",
+        "        x, y = loc\n",
+        "        if 0 <= x < self.width and 0 <= y < self.height:\n",
+        "            return self.empty\n",
+        "        else:\n",
+        "            return self.off\n",
+        "\n",
+        "    def __hash__(self):\n",
+        "        return hash(tuple(sorted(self.items()))) + hash(self.to_move)\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        def row(y): return ' '.join(self[x, y] for x in range(self.width))\n",
+        "        return '\\n'.join(map(row, range(self.height))) + '\\n'\n",
+        "\n",
+        "class TicTacToe:\n",
+        "\n",
+        "\n",
+        "    def __init__(self, height=3, width=3, k=3):\n",
+        "        self.k = k  # k in a row\n",
+        "        self.squares = {(x, y) for x in range(width) for y in range(height)}\n",
+        "        self.initial = Board(width=width, height=height, to_move='X', utility=0)\n",
+        "\n",
+        "    def actions(self, board):\n",
+        "\n",
+        "        available_actions = self.squares - set(board)\n",
+        "        print(f\"Available actions: {available_actions}\")  # Debug print\n",
+        "        return available_actions\n",
+        "\n",
+        "    def result(self, board, square):\n",
+        "        player = board.to_move\n",
+        "        new_board = board.new({square: player}, to_move=('O' if player == 'X' else 'X'))\n",
+        "        win = self.k_in_row(new_board, player, square)\n",
+        "        new_board.utility = (0 if not win else +1 if player == 'X' else -1)\n",
+        "        return new_board\n",
+        "\n",
+        "    def utility(self, board, player):\n",
+        "        return board.utility if player == 'X' else -board.utility\n",
+        "\n",
+        "    def is_terminal(self, board):\n",
+        "        no_empty_squares = len(self.squares - set(board)) == 0\n",
+        "        return board.utility != 0 or no_empty_squares\n",
+        "\n",
+        "    def display(self, board):\n",
+        "        print(board)\n",
+        "\n",
+        "    def k_in_row(self, board, player, square):\n",
+        "        def in_row(x, y, dx, dy):\n",
+        "            return 0 if board[x, y] != player else 1 + in_row(x + dx, y + dy, dx, dy)\n",
+        "\n",
+        "        return any(in_row(*square, dx, dy) + in_row(*square, -dx, -dy) - 1 >= self.k\n",
+        "                   for (dx, dy) in ((0, 1), (1, 0), (1, 1), (1, -1)))\n",
+        "\n",
+        "def random_player(game, state):\n",
+        "    actions = list(game.actions(state))\n",
+        "    if not actions:\n",
+        "        raise ValueError(\"No actions available\")\n",
+        "    return random.choice(actions)\n",
+        "\n",
+        "def play_game(game):\n",
+        "    state = game.initial\n",
+        "    move_count = 0\n",
+        "    max_moves = game.initial.width * game.initial.height\n",
+        "\n",
+        "    while not game.is_terminal(state) and move_count < max_moves:\n",
+        "        action = random_player(game, state)\n",
+        "        print(f\"Player {state.to_move} moves at {action}\")\n",
+        "        state = game.result(state, action)\n",
+        "        game.display(state)\n",
+        "        print()\n",
+        "        move_count += 1\n",
+        "\n",
+        "    if game.is_terminal(state):\n",
+        "        result = 'Draw' if state.utility == 0 else f\"{state.to_move} wins!\"\n",
+        "    else:\n",
+        "        result = \"Game did not end properly.\"\n",
+        "\n",
+        "    print(f\"Game Over. {result}\")\n",
+        "\n",
+        "game = TicTacToe()\n",
+        "play_game(game)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "XnuhbjqxAYyM",
+        "outputId": "c67a2451-ff02-468d-c33b-0253683f2715",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Available actions: {(0, 1), (1, 2), (2, 1), (0, 0), (1, 1), (2, 0), (0, 2), (2, 2), (1, 0)}\n",
+            "Player X moves at (1, 1)\n",
+            ". . .\n",
+            ". X .\n",
+            ". . .\n",
+            "\n",
+            "\n",
+            "Game Over. Draw\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#part4\n",
+        "import random\n",
+        "import math\n",
+        "class TicTacToe:\n",
+        "    def _init_(self):\n",
+        "        self.board = [' '] * 9\n",
+        "        self.current_winner = None !\n",
+        "\n",
+        "    def print_board(self):\n",
+        "        for i in range(0, 9, 3):\n",
+        "            print('|'.join(self.board[i:i + 3]))\n",
+        "        print()\n",
+        "\n",
+        "    def available_moves(self):\n",
+        "        return [i for i, spot in enumerate(self.board) if spot == ' ']\n",
+        "\n",
+        "    def make_move(self, square, letter):\n",
+        "        if self.board[square] == ' ':\n",
+        "            self.board[square] = letter\n",
+        "            if self.winner(square, letter):\n",
+        "                self.current_winner = letter\n",
+        "            return True\n",
+        "        return False\n",
+        "\n",
+        "    def winner(self, square, letter):\n",
+        "        row_ind = square // 3\n",
+        "        row = self.board[row_ind * 3: (row_ind + 1) * 3]\n",
+        "        if all([spot == letter for spot in row]):\n",
+        "            return True\n",
+        "        col_ind = square % 3\n",
+        "        column = [self.board[col_ind + i * 3] for i in range(3)]\n",
+        "        if all([spot == letter for spot in column]):\n",
+        "            return True\n",
+        "        if square % 2 == 0:\n",
+        "            diagonal1 = [self.board[i] for i in [0, 4, 8]]\n",
+        "            if all([spot == letter for spot in diagonal1]):\n",
+        "                return True\n",
+        "            diagonal2 = [self.board[i] for i in [2, 4, 6]]\n",
+        "            if all([spot == letter for spot in diagonal2]):\n",
+        "                return True\n",
+        "        return False\n",
+        "\n",
+        "    def is_full(self):\n",
+        "        return ' ' not in self.board\n",
+        "\n",
+        "    def reset(self):\n",
+        "        self._init_()\n",
+        "def play_game(game, players, verbose=False):\n",
+        "    game.reset()\n",
+        "    turn = 'X'\n",
+        "    while not game.is_full():\n",
+        "        if verbose:\n",
+        "            game.print_board()\n",
+        "        move = players[turn](game)\n",
+        "        game.make_move(move, turn)\n",
+        "        if game.current_winner:\n",
+        "            if verbose:\n",
+        "                game.print_board()\n",
+        "            return turn\n",
+        "        turn = 'O' if turn == 'X' else 'X'\n",
+        "    if verbose:\n",
+        "        game.print_board()\n",
+        "    return 'Tie'\n",
+        "\n",
+        "def random_player(game):\n",
+        "    return random.choice(game.available_moves())\n",
+        "def alpha_beta_search(game, depth, alpha, beta, maximizing_player):\n",
+        "    if game.current_winner == 'X':\n",
+        "        return 1\n",
+        "    if game.current_winner == 'O':\n",
+        "        return -1\n",
+        "    if game.is_full() or depth == 0:\n",
+        "        return 0\n",
+        "\n",
+        "    if maximizing_player:\n",
+        "        max_eval = -math.inf\n",
+        "        for move in game.available_moves():\n",
+        "            game.make_move(move, 'X')\n",
+        "            eval = alpha_beta_search(game, depth - 1, alpha, beta, False)\n",
+        "            game.board[move] = ' '\n",
+        "            game.current_winner = None\n",
+        "            max_eval = max(max_eval, eval)\n",
+        "            alpha = max(alpha, eval)\n",
+        "            if beta <= alpha:\n",
+        "                break\n",
+        "        return max_eval\n",
+        "    else:\n",
+        "        min_eval = math.inf\n",
+        "        for move in game.available_moves():\n",
+        "            game.make_move(move, 'O')\n",
+        "            eval = alpha_beta_search(game, depth - 1, alpha, beta, True)\n",
+        "            game.board[move] = ' '\n",
+        "            game.current_winner = None\n",
+        "            min_eval = min(min_eval, eval)\n",
+        "            beta = min(beta, eval)\n",
+        "            if beta <= alpha:\n",
+        "                break\n",
+        "        return min_eval\n",
+        "\n",
+        "def alpha_beta_player(game):\n",
+        "    best_move = None\n",
+        "    best_value = -math.inf\n",
+        "    for move in game.available_moves():\n",
+        "        game.make_move(move, 'X')\n",
+        "        move_value = alpha_beta_search(game, 3, -math.inf, math.inf, False)\n",
+        "        game.board[move] = ' '\n",
+        "        game.current_winner = None\n",
+        "        if move_value > best_value:\n",
+        "            best_value = move_value\n",
+        "            best_move = move\n",
+        "    return best_move\n",
+        "\n",
+        "\n",
+        "def minimax_search(game, depth, maximizing_player):\n",
+        "    if game.current_winner == 'X':\n",
+        "        return 1\n",
+        "    if game.current_winner == 'O':\n",
+        "        return -1\n",
+        "    if game.is_full() or depth == 0:\n",
+        "        return 0\n",
+        "\n",
+        "    if maximizing_player:\n",
+        "        best_value = -math.inf\n",
+        "        for move in game.available_moves():\n",
+        "            game.make_move(move, 'X')\n",
+        "            move_value = minimax_search(game, depth - 1, False)\n",
+        "            game.board[move] = ' '\n",
+        "            game.current_winner = None\n",
+        "            best_value = max(best_value, move_value)\n",
+        "        return best_value\n",
+        "    else:\n",
+        "        best_value = math.inf\n",
+        "        for move in game.available_moves():\n",
+        "            game.make_move(move, 'O')\n",
+        "            move_value = minimax_search(game, depth - 1, True)\n",
+        "            game.board[move] = ' '\n",
+        "            game.current_winner = None\n",
+        "            best_value = min(best_value, move_value)\n",
+        "        return best_value\n",
+        "\n",
+        "def minimax_player(game):\n",
+        "    best_move = None\n",
+        "    best_value = -math.inf\n",
+        "    for move in game.available_moves():\n",
+        "        game.make_move(move, 'X')\n",
+        "        move_value = minimax_search(game, 3, False)\n",
+        "        game.board[move] = ' '\n",
+        "        game.current_winner = None\n",
+        "        if move_value > best_value:\n",
+        "            best_value = move_value\n",
+        "            best_move = move\n",
+        "    return best_move\n",
+        "result1 = play_game(TicTacToe(), {'X': random_player, 'O': alpha_beta_player}, verbose=True)\n",
+        "print(f\"Result with Alpha-Beta vs Random: {result1}\")\n",
+        "result2 = play_game(TicTacToe(), {'X': alpha_beta_player, 'O': minimax_player}, verbose=True)\n",
+        "print(f\"Result with Minimax vs Alpha-Beta: {result2}\")"
+      ],
+      "metadata": {
+        "id": "2JF6KRS0JCal",
+        "outputId": "6c4fb7e6-8c63-48a9-9c4d-0d8302548235",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " | | \n",
+            " | | \n",
+            " | | \n",
+            "\n",
+            " | | \n",
+            "X| | \n",
+            " | | \n",
+            "\n",
+            "O| | \n",
+            "X| | \n",
+            " | | \n",
+            "\n",
+            "O|X| \n",
+            "X| | \n",
+            " | | \n",
+            "\n",
+            "O|X| \n",
+            "X|O| \n",
+            " | | \n",
+            "\n",
+            "O|X| \n",
+            "X|O| \n",
+            " | |X\n",
+            "\n",
+            "O|X|O\n",
+            "X|O| \n",
+            " | |X\n",
+            "\n",
+            "O|X|O\n",
+            "X|O| \n",
+            "X| |X\n",
+            "\n",
+            "O|X|O\n",
+            "X|O| \n",
+            "X|O|X\n",
+            "\n",
+            "O|X|O\n",
+            "X|O|X\n",
+            "X|O|X\n",
+            "\n",
+            "Result with Alpha-Beta vs Random: Tie\n",
+            " | | \n",
+            " | | \n",
+            " | | \n",
+            "\n",
+            "X| | \n",
+            " | | \n",
+            " | | \n",
+            "\n",
+            "X|O| \n",
+            " | | \n",
+            " | | \n",
+            "\n",
+            "X|O|X\n",
+            " | | \n",
+            " | | \n",
+            "\n",
+            "X|O|X\n",
+            " |O| \n",
+            " | | \n",
+            "\n",
+            "X|O|X\n",
+            " |O| \n",
+            " |X| \n",
+            "\n",
+            "X|O|X\n",
+            " |O| \n",
+            "O|X| \n",
+            "\n",
+            "X|O|X\n",
+            "X|O| \n",
+            "O|X| \n",
+            "\n",
+            "X|O|X\n",
+            "X|O|O\n",
+            "O|X| \n",
+            "\n",
+            "X|O|X\n",
+            "X|O|O\n",
+            "O|X|X\n",
+            "\n",
+            "Result with Minimax vs Alpha-Beta: Tie\n"
           ]
         }
       ]
